--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="canonical" href="http://bighoki288.doulit.co.kr/">
   <link rel="icon" type="image/png" href="https://i.ibb.co/yd8yHNp/63fe9b170b9fc-BIGHOKI288-MOBILE2.png">
   <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
+  <meta name="google-site-verification" content="6AAAbimnFbze3JU7CAMj2_ooiMTVpt9Sa3MDb23_rl0" />
   <meta name="google-site-verification" content="HMkWTB3_ZLXkmj3GUfz7LGCFdCCN475vlq_QgYgA_rc" />
   <meta name="google-site-verification" content="_hoYAoluNcFqNWr7PY4-64lbFw1R_ae5k3x1aSs7AKg" />
   <title>BIGHOKI288: Situs Slot Gacor Gampang Menang Hari Ini Slot Bet 100 Perak Bighoki288</title>
